Removed NativeGUIStub file from Makefile.am that seems to be missing anyways
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5028 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/NativeGUI/Makefile.am
+++ b/NativeGUI/Makefile.am
@@ -1,8 +1,7 @@
 NativeGUISOURCES = \
 	NativeGUI.h \
 	NativeGUIMac.mm \
-	NativeGUI.i \
-	NativeGUIstub.java
+	NativeGUI.i
 
 NativeGUITARGETS = \
 	NativeGUI.jar \
