--- a/plugins/SlideExplorer/build.xml
+++ b/plugins/SlideExplorer/build.xml
@@ -13,11 +13,11 @@
 	<property name="BinRoot" value="../../bin_Win32"/>
         <property name="classext" value="../../../3rdpartypublic/classext"/>
 
-        <property name="IJ" value="{classext}/ij.jar"/>
-        <property name="beanshell" value="{classext}/bsh-2.0b4.jar"/>
-        <property name="swinglayout" value="{classext}/swing-layout-1.0.4.jar"/>
-        <property name="commonsmath" value="{classext}/commons-math-2.0.jar"/>
-        <property name="swingx" value="{classext}/swingx-0.9.5.jar"/>
+        <property name="IJ" value="${classext}/ij.jar"/>
+        <property name="beanshell" value="${classext}/bsh-2.0b4.jar"/>
+        <property name="swinglayout" value="${classext}/swing-layout-1.0.4.jar"/>
+        <property name="commonsmath" value="${classext}/commons-math-2.0.jar"/>
+        <property name="swingx" value="${classext}/swingx-0.9.5.jar"/>
 
 	<property name="pixelcalibrator" value="../PixelCalibrator/PixelCalibrator.jar"/>
 
