Add source directory.
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5091 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/IDE_projects/NetBeansProjects/mm/nbproject/project.properties
+++ b/IDE_projects/NetBeansProjects/mm/nbproject/project.properties
@@ -9,6 +9,7 @@ file.reference.bsh-2.0b4.jar=../../../../3rdpartypublic/classext/bsh-2.0b4.jar
 file.reference.commons-math-2.0.jar=../../../../3rdpartypublic/classext/commons-math-2.0.jar
 file.reference.ij.jar=../../../../3rdpartypublic/classext/ij.jar
 file.reference.MMCoreJ.jar=../../../MMCoreJ_wrap/MMCoreJ.jar
+file.reference.mmstudio-src=../../../mmstudio/src
 file.reference.swing-layout-1.0.4.jar=../../../../3rdpartypublic/classext/swing-layout-1.0.4.jar
 file.reference.swingx-0.9.5.jar=../../../../3rdpartypublic/classext/swingx-0.9.5.jar
 includes=**
@@ -39,3 +40,4 @@ platform.active=default_platform
 run.classpath=
 run.jvmargs=-Xmx600M
 run.test.classpath=
+src.src.dir=${file.reference.mmstudio-src}
