Fixed broken path to ij.jar in configure.in
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5128 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/configure.in
+++ b/configure.in
@@ -26,7 +26,7 @@ if test "$IMAGEJDIR" != "no" ; then
    # Find ij.jar in directory
    #----------------------------------------------------------------
    AC_MSG_CHECKING(for ij.jar)
-   IJJARDIR="$CLASSEXT/ij/ij.jar"
+   IJJARDIR="$CLASSEXT/ij.jar"
    echo "IJJARDDIR="$IJJARDIR
    if test -r "$IJJARDIR" ; then
       IJJARPATH="$IJJARDIR"
