--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -35,7 +35,15 @@ RecallPlugin.jar:  \
 	## Work around bug in 'jar': jar cf MM_.jar -C bin/ bin/* does not work
 	cd build && jar cf ../RecallPlugin.jar * 
 
-all: MMTracker_.jar PixelCalibrator.jar SlideExplorer.jar RecallPlugin.jar
+StageControl.jar:  \
+	$(srcdir)/StageControl/src/org/micromanager/stagecontrol/*.java
+	test -d build || mkdir build
+	rm -rf build/*
+	$(JAVAC) -source 1.5 -target 1.5 -sourcepath $(srcdir):. -classpath $(srcdir)/StageControl.jar:$(IJJARPATH):$(BSHJARPATH):$(COMMONSMATHJARPATH):$(SWINGLAYOUTJARPATH):../bin/MMCoreJ.jar:../mmstudio/MMJ_.jar:. $(srcdir)/StageControl/src/org/micromanager/stagecontrol/*.java -d build
+	cp -r $(srcdir)/StageControl/src/org/micromanager/stagecontrol/icons build/
+	cd build && jar cf ../StageControl.jar * 
+
+all: MMTracker_.jar PixelCalibrator.jar SlideExplorer.jar RecallPlugin.jar StageControl.jar
 
 install: 
 	test -d $(IJPATH)/mmplugins || mkdir $(IJPATH)/mmplugins
@@ -43,11 +51,13 @@ install:
 	cp PixelCalibrator.jar $(IJPATH)/mmplugins
 	cp SlideExplorer.jar $(IJPATH)/mmplugins
 	cp RecallPlugin.jar $(IJPATH)/mmplugins
+	cp StageControl.jar $(IJPATH)/mmplugins
 	
 clean:
 	test -f MMTracker_.jar && rm MMTracker_.jar || echo "MMTracker_.jar not found"
 	test -f PixelCalibrator.jar && rm PixelCalibrator.jar || echo "PixelCalibrator.jar not found"
 	test -f SlideExplorer.jar && rm SlideExplorer.jar || echo "SlideExplorer.jar not found"
 	test -f Projector.jar && rm Projector.jar || echo "Projector.jar not found"
+	test -f StageControl.jar && rm StageControl.jar || echo "StageControl.jar not found"
 	
 EXTRA_DIST = src build.xml
