Fixed runtime error in stage control plugin
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5191 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -40,7 +40,7 @@ StageControl.jar:  \
 	test -d build || mkdir build
 	rm -rf build/*
 	$(JAVAC) -source 1.5 -target 1.5 -sourcepath $(srcdir):. -classpath $(srcdir)/StageControl.jar:$(IJJARPATH):$(BSHJARPATH):$(COMMONSMATHJARPATH):$(SWINGLAYOUTJARPATH):../bin/MMCoreJ.jar:../mmstudio/MMJ_.jar:. $(srcdir)/StageControl/src/org/micromanager/stagecontrol/*.java -d build
-	cp -r $(srcdir)/StageControl/src/org/micromanager/stagecontrol/icons build/
+	cp -r $(srcdir)/StageControl/src/org/micromanager/stagecontrol/icons build/org/micromanager/stagecontrol/
 	cd build && jar cf ../StageControl.jar * 
 
 all: MMTracker_.jar PixelCalibrator.jar SlideExplorer.jar RecallPlugin.jar StageControl.jar
