--- a/plugins/Projector/build.xml
+++ b/plugins/Projector/build.xml
@@ -7,17 +7,17 @@
 	<property name="InstallRoot" value="../../Install/micro-manager"/>
 
 	<!-- Do not modify from this point on -->
-	<property name="MMPluginDir" value="../../bin/plugins/Micro-Manager"/>
-	<property name="MMCoreJ" value="../../bin/MMCoreJ.jar"/>
+	<property name="MMPluginDir" value="../../bin_Win32/plugins/Micro-Manager"/>
+	<property name="MMCoreJ" value="../../bin_Win32/MMCoreJ.jar"/>
 	<property name="MMPluginsDir-inst" value="${InstallRoot}/mmplugins"/>
-	<property name="BinRoot" value="../../bin"/>
+	<property name="BinRoot" value="../../bin_Win32"/>
         <property name="classext" value="../../../3rdpartypublic/classext"/>
 
-        <property name="IJ" value="{classext}/ij.jar"/>
-        <property name="beanshell" value="{classext}/bsh-2.0b4.jar"/>
-        <property name="swinglayout" value="{classext}/swing-layout-1.0.4.jar"/>
-        <property name="commonsmath" value="{classext}/commons-math-2.0.jar"/>
-        <property name="swingx" value="{classext}/swingx-0.9.5.jar"/>
+        <property name="IJ" value="${classext}/ij.jar"/>
+        <property name="beanshell" value="${classext}/bsh-2.0b4.jar"/>
+        <property name="swinglayout" value="${classext}/swing-layout-1.0.4.jar"/>
+        <property name="commonsmath" value="${classext}/commons-math-2.0.jar"/>
+        <property name="swingx" value="${classext}/swingx-0.9.5.jar"/>
 
 	<path id="project.MMPlugins.path">
 		<pathelement location="${MMPluginDir}"/>
