--- a/plugins/PixelCalibrator/build.xml
+++ b/plugins/PixelCalibrator/build.xml
@@ -1,7 +1,7 @@
 <!-- Ant makefile for the Micro-Manager PixelCalibrator plugin  -->
 <!-- This file assumes Micro-Manager project tree structure -->
 
-<project name="MMPixelCalibrator" default="buildMMPixelCalibrator">
+<project name="MMPixelCalibrator" default="build">
 
 	<!-- Specify the system path to the ImageJ root directory -->
 	<property name="InstallRoot" value="../../Install_Win32/micro-manager"/>
@@ -36,7 +36,7 @@
 
 	</path>
 
-	<target name="compileMMPixelCalibrator" description="Compile PixelCalibrator plugin.">
+	<target name="compile" description="Compile PixelCalibrator plugin.">
 		<mkdir dir="build" />
 		<javac srcdir="./src" destdir="./build" optimize="on" source="1.5" target="1.5" debug="on">
 			<classpath refid="project.class.path" />
@@ -44,12 +44,12 @@
 		<copy file="./src/org/micromanager/pixelcalibrator/PixelCalibratorDialog.form" todir="./build/org/micromanager/pixelcalibrator/" />
 	</target>
 
-	<target name="buildMMPixelCalibrator" description="Build PixelCalibrator.jar">
+	<target name="build" description="Build PixelCalibrator.jar">
 		<jar jarfile="PixelCalibrator.jar" basedir="build" />
 		<copy file="PixelCalibrator.jar" todir="${MMPluginsDir-inst}" />
 	</target>
 	
-	<target name="cleanMMPixelCalibrator" description="Delete the PixelCalibrator build files.">
+	<target name="clean" description="Delete the PixelCalibrator build files.">
 		<delete dir="build" />
 		<delete file="PixelCalibrator.jar" />
 	</target>
