--- a/mmstudio/Makefile.am
+++ b/mmstudio/Makefile.am
@@ -10,7 +10,6 @@ MMJ_.jar:  \
 	$(srcdir)/src/org/micromanager/ConfigGroupPad.java \
 	$(srcdir)/src/org/micromanager/ConfigPadButtonPanel.java \
 	$(srcdir)/src/org/micromanager/MMAboutDlg.java \
-	$(srcdir)/src/org/micromanager/MMAcquisitionEngineMT.java \
 	$(srcdir)/src/org/micromanager/MMIntroDlg.java \
 	$(srcdir)/src/org/micromanager/MMOptions.java \
 	$(srcdir)/src/org/micromanager/MMStudioMainFrame.java \
@@ -160,7 +159,7 @@ MMJ_.jar:  \
 	test -d build || mkdir build
 	rm -rf build/*
 	cp $(srcdir)/bin/plugins_mmstudio.config build/plugins.config
-	$(JAVAC) -source 1.5 -target 1.5 -sourcepath ../MMCoreJ_wrap:$(srcdir)/src:../hcs/src:. -classpath $(IJJARPATH):$(BSHJARPATH):$(SWINGXJARPATH):$(COMMONSMATHJARPATH):$(SWINGLAYOUTJARPATH):$(topsrcdir)/bin/MMCoreJ.jar:. $(srcdir)/src/*.java $(srcdir)/src/org/micromanager/utils/*.java $(srcdir)/src/org/micromanager/MMAcquisitionEngineMT.java -d build
+	$(JAVAC) -source 1.5 -target 1.5 -sourcepath ../MMCoreJ_wrap:$(srcdir)/src:../hcs/src:. -classpath $(IJJARPATH):$(BSHJARPATH):$(SWINGXJARPATH):$(COMMONSMATHJARPATH):$(SWINGLAYOUTJARPATH):$(topsrcdir)/bin/MMCoreJ.jar:. $(srcdir)/src/*.java $(srcdir)/src/org/micromanager/utils/*.java -d build
 	cp -rf $(srcdir)/src/org/micromanager/icons build/org/micromanager
 	cp -rf $(srcdir)/src/org/micromanager/conf/*html build/org/micromanager/conf
 	## Work around bug in 'jar': jar cf MM_.jar -C bin/ bin/* does not work
