Johannes patch03-16  Remove all the .class files in mmstudio/ upon make clean
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5589 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/Makefile.am
+++ b/mmstudio/Makefile.am
@@ -184,6 +184,7 @@ install:
 clean:
 	test -e MMJ_.jar && rm MMJ_.jar || echo "MMJ_.jar not found"
 	test -e MMReader_.jar && rm MMReader_.jar || echo "MMReader_.jar not found"
+	find . -name \*.class -exec rm {} \;
 
 javadoc:
 	test -d $(srcdir)/doc || mkdir $(srcdir)/doc
