Johannes patch to add BOOST_CPPFLAGS to make file where needed
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5607 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/configure.in
+++ b/configure.in
@@ -131,6 +131,7 @@ else
    # Check for BOOST
    #---------------------------------------------------
    AX_BOOST_BASE(1.2)
+   AX_BOOST_DATE_TIME
 
    #---------------------------------------------------
    # Check for ZLIB
