Added some functions to MDUtils
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5718 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/Makefile.am
+++ b/mmstudio/Makefile.am
@@ -146,6 +146,7 @@ MMJ_.jar:  \
 	$(srcdir)/src/org/micromanager/utils/JavaUtils.java \
 	$(srcdir)/src/org/micromanager/utils/LUTDialog.java \
 	$(srcdir)/src/org/micromanager/utils/LargeMessageDlg.java \
+	$(srcdir)/src/org/micromanager/utils/MDUtils.java \
 	$(srcdir)/src/org/micromanager/utils/MMAutofocusException.java \
 	$(srcdir)/src/org/micromanager/utils/MMDialog.java \
 	$(srcdir)/src/org/micromanager/utils/MMException.java \
