Added switch -XX:SoftRefLRUPolicyMSPerMB=1000000 to Info.Plist in Macinstaller.
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5794 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/MacInstaller/Micro-Manager/ImageJ.app/Contents/Info.plist
+++ b/MacInstaller/Micro-Manager/ImageJ.app/Contents/Info.plist
@@ -71,7 +71,7 @@
 			<string>true</string>
 		</dict>
 		<key>VMOptions</key>
-		<string>-Xms32m -Xmx640m</string>
+		<string>-Xms32m -Xmx640m -XX:SoftRefLRUPolicyMSPerMB=1000000</string>
 	</dict>
 </dict>
 </plist>
