Added MMWindow class to the API
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5803 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/Makefile.am
+++ b/mmstudio/Makefile.am
@@ -54,6 +54,7 @@ MMJ_.jar:  \
 	$(srcdir)/src/org/micromanager/api/AcquisitionEngine.java \
 	$(srcdir)/src/org/micromanager/api/DeviceControlGUI.java \
 	$(srcdir)/src/org/micromanager/api/MMPropertyTableModel.java \
+	$(srcdir)/src/org/micromanager/api/MMWindow.java \
 	$(srcdir)/src/org/micromanager/api/ScriptInterface.java \
 	$(srcdir)/src/org/micromanager/conf/*.html \
 	$(srcdir)/src/org/micromanager/conf/AddDeviceDlg.java \
