Made make clean work
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@6068 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/acqEngine/Makefile.am
+++ b/acqEngine/Makefile.am
@@ -11,5 +11,5 @@ install:
 	cp MMAcqEngine.jar $(DESTDIR)$(IJPATH)/plugins/Micro-Manager
 
 clean:
-	rm MMAcqEngine.jar
+	test -e MMAcqEngine.jar && rm MMAcqEngine.jar || echo "MMAcqEngine.jar not found"
 
