Added rules to trigger clojure build correctly
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@6081 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/acqEngine/Makefile.am
+++ b/acqEngine/Makefile.am
@@ -1,4 +1,7 @@
-MMAcqEngine.jar:
+MMAcqEngine.jar: \
+	$(srcdir)/src/org/micromanager/mm.clj \
+	$(srcdir)/src/org/micromanager/acq_engine.clj \
+	$(srcdir)/src/org/micromanager/sequence_generator.clj
 	test -d classes || mkdir classes
 	rm -rf classes/*
 	cp -R src/org classes/
