Update to mmstudio Makefile
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@6083 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/Makefile.am
+++ b/mmstudio/Makefile.am
@@ -23,6 +23,7 @@ MMJ_.jar:  \
 	$(srcdir)/src/org/micromanager/license.txt \
 	$(srcdir)/src/org/micromanager/acquisition/AcquisitionManager.java \
 	$(srcdir)/src/org/micromanager/acquisition/AcquisitionVirtualStack.java \
+	$(srcdir)/src/org/micromanager/acquisition/AcquisitionWrapperEngine.java \
 	$(srcdir)/src/org/micromanager/acquisition/ChannelControlPanel.java \
 	$(srcdir)/src/org/micromanager/acquisition/ChannelControlPanel.form \
 	$(srcdir)/src/org/micromanager/acquisition/ChannelDisplaySettings.java \
