--- a/configure.in
+++ b/configure.in
@@ -150,7 +150,7 @@ else
    #---------------------------------------------------
    # Check for BOOST
    #---------------------------------------------------
-   AX_BOOST_BASE(1.2)
+   AX_BOOST_BASE([1.40.0])
    AX_BOOST_DATE_TIME
 
    #---------------------------------------------------
