--- a/mmstudio/bin/plugins_mmstudio.config
+++ b/mmstudio/bin/plugins_mmstudio.config
@@ -14,40 +14,40 @@
 Plugins>Micro-Manager, "Micro-Manager Studio", MMStudioPlugin("")
 
 
-File>Import, "Micro-Manager", MMImage5DReaderPlugin_("")
+File>Import, "Micro-Manager", org.micromanager.MMStudioMainFrame.openAcquisitionData("")
 
 
-Plugins>Micro-Manager, " Open Micro-Manager File", MMImage5DReaderPlugin_("")
+Plugins>Micro-Manager, " Open Micro-Manager File", org.micromanager.MMStudioMainFrame.openAcquisitionData("")
 
 
-Plugins>Micro-Manager, "  ---------- ", org.micromanager.image5d.Spacer_Image5D("")
+#Plugins>Micro-Manager, "  ---------- ", org.micromanager.image5d.Spacer_Image5D("")
 
 
-Plugins>Micro-Manager, " Duplicate", org.micromanager.image5d.Duplicate_Image5D("")
+#Plugins>Micro-Manager, " Duplicate", org.micromanager.image5d.Duplicate_Image5D("")
 
 
-Plugins>Micro-Manager, " Crop", org.micromanager.image5d.Crop_Image5D("")
+#Plugins>Micro-Manager, " Crop", org.micromanager.image5d.Crop_Image5D("")
 
 
-Plugins>Micro-Manager, " Make Montage", org.micromanager.image5d.Make_Montage("")
+#Plugins>Micro-Manager, " Make Montage", org.micromanager.image5d.Make_Montage("")
 
 
-Plugins>Micro-Manager, " Z Project", org.micromanager.image5d.Z_Project("")
+#Plugins>Micro-Manager, " Z Project", org.micromanager.image5d.Z_Project("")
 
 
-Plugins>Micro-Manager, " Copy to RGB Stack (z)", org.micromanager.image5d.Image5D_Stack_to_RGB("")
+#Plugins>Micro-Manager, " Copy to RGB Stack (z)", org.micromanager.image5d.Image5D_Stack_to_RGB("")
 
 
-Plugins>Micro-Manager, " Copy to RGB Stack (t)", org.micromanager.image5d.Image5D_Stack_to_RGB_t("")
+#Plugins>Micro-Manager, " Copy to RGB Stack (t)", org.micromanager.image5d.Image5D_Stack_to_RGB_t("")
 
 
-Plugins>Micro-Manager, " Copy to Stack", org.micromanager.image5d.Image5D_to_Stack("")
+#Plugins>Micro-Manager, " Copy to Stack", org.micromanager.image5d.Image5D_to_Stack("")
 
 
-Plugins>Micro-Manager, " Copy to Stacks (channels)", org.micromanager.image5d.Image5D_Channels_to_Stacks("")
+#Plugins>Micro-Manager, " Copy to Stacks (channels)", org.micromanager.image5d.Image5D_Channels_to_Stacks("")
 
 
-Plugins>Micro-Manager, " Volume Viewer", org.micromanager.image5d.Image5D_to_VolumeViewer("")
+#Plugins>Micro-Manager, " Volume Viewer", org.micromanager.image5d.Image5D_to_VolumeViewer("")
 
 
-Plugins>Micro-Manager, " Split View", org.micromanager.image5d.Split_Image5D("")
+#Plugins>Micro-Manager, " Split View", org.micromanager.image5d.Split_Image5D("")
