Made ImageJ menu commands work again
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@6179 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/bin/plugins_mmstudio.config
+++ b/mmstudio/bin/plugins_mmstudio.config
@@ -14,10 +14,10 @@
 Plugins>Micro-Manager, "Micro-Manager Studio", MMStudioPlugin("")
 
 
-File>Import, "Micro-Manager", org.micromanager.MMStudioMainFrame.openAcquisitionData("")
+File>Import, "Micro-Manager", MMStudioPlugin("OpenAcq")
 
 
-Plugins>Micro-Manager, " Open Micro-Manager File", org.micromanager.MMStudioMainFrame.openAcquisitionData("")
+Plugins>Micro-Manager, " Open Micro-Manager File", MMStudioPlugin("OpenAcq")
 
 
 #Plugins>Micro-Manager, "  ---------- ", org.micromanager.image5d.Spacer_Image5D("")
