live mode and snap for color
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@6539 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/acqEngine/Makefile.am
+++ b/acqEngine/Makefile.am
@@ -8,7 +8,7 @@ MMAcqEngine.jar: \
 	java -cp $(CLASSEXT)/clojure.jar:$(IJJARPATH):../mmstudio/MMJ_.jar:./src -Djava.awt.headless=true -Dclojure.compile.path=classes -server clojure.lang.Compile org.micromanager.acq-engine
 	jar cvf MMAcqEngine.jar -C classes/ .    
 
-all: MMAcqEngine.jar
+all: ../mmstudio MMAcqEngine.jar
 
 install:
 	cp MMAcqEngine.jar $(DESTDIR)$(IJPATH)/plugins/Micro-Manager
