--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -63,8 +63,8 @@ all: PixelCalibrator.jar RecallPlugin.jar StageControl.jar MultiCamera.jar Big.j
 install: 
 	test -d $(IJPATH)/mmplugins || mkdir $(IJPATH)/mmplugins
 	## cp MMTracker_.jar $(IJPATH)/mmplugins
-	## cp PixelCalibrator.jar $(IJPATH)/mmplugins
-	## cp SlideExplorer.jar $(IJPATH)/mmplugins
+	cp PixelCalibrator.jar $(IJPATH)/mmplugins
+	cp SlideExplorer.jar $(IJPATH)/mmplugins
 	cp RecallPlugin.jar $(IJPATH)/mmplugins
 	cp StageControl.jar $(IJPATH)/mmplugins
 	cp MultiCamera.jar $(IJPATH)/mmplugins
