Removed SlideExplorer from make install since it is not currently build
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@6650 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -64,7 +64,7 @@ install:
 	test -d $(IJPATH)/mmplugins || mkdir $(IJPATH)/mmplugins
 	## cp MMTracker_.jar $(IJPATH)/mmplugins
 	cp PixelCalibrator.jar $(IJPATH)/mmplugins
-	cp SlideExplorer.jar $(IJPATH)/mmplugins
+	## cp SlideExplorer.jar $(IJPATH)/mmplugins
 	cp RecallPlugin.jar $(IJPATH)/mmplugins
 	cp StageControl.jar $(IJPATH)/mmplugins
 	cp MultiCamera.jar $(IJPATH)/mmplugins
